<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gazebo_ros_motors</name>
  <version>1.1.1</version>
  <description>
    Gazebo-ROS plugin for electro-mechanically accurate DC motor simulation.
  </description>

  <maintainer email="marton@neorobot.hu">nilseuropa</maintainer>
  <author>Marton Juhasz, Gergely Gyebroszki</author>

  <license>NO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>gazebo_dev</build_depend>
  <exec_depend>gazebo</exec_depend>

  <depend>gazebo_plugins</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>gazebo_ros</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
	  <build_type>ament_cmake</build_type>
  </export>
</package>
